--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Michael Windell portfolio website",
     "dependencies": {
+        "html5-device-mockups": "^3.2.0",
         "jquery": "^3.2.1",
         "jquery-lazyload": "^1.9.7",
         "jquery-smooth-scroll": "^2.2.0",
